tests/machine/x/cobol/map_index.error
error: cobc error: exit status 1
/workspace/mochi/tests/machine/x/cobol/map_index.cob:6: error: syntax error, unexpected OCCURS
/workspace/mochi/tests/machine/x/cobol/map_index.cob:6: error: PICTURE clause required for 'FILLER 1'
/workspace/mochi/tests/machine/x/cobol/map_index.cob:10: error: syntax error, unexpected VALUE
/workspace/mochi/tests/machine/x/cobol/map_index.cob:12: error: syntax error, unexpected VALUE
/workspace/mochi/tests/machine/x/cobol/map_index.cob:15: error: syntax error, unexpected VALUE, expecting (


source:
let m = {"a": 1, "b": 2}
print(m["b"])
