tests/machine/x/cobol/map_index.cob
*> Generated by Mochi compiler v0.10.27 on 2025-07-17T11:45:39Z
>>SOURCE FORMAT FREE
       IDENTIFICATION DIVISION.
       PROGRAM-ID. MAP-INDEX.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 M.
           05 A PIC 9 VALUE 1.
           05 B PIC 9 VALUE 2.
       01 TMP PIC S9(9) VALUE 0.
       01 TMP-STR PIC Z(18).
       PROCEDURE DIVISION.
       DISPLAY 2
       STOP RUN.
